--- a/scraping_matches.ipynb
+++ b/scraping_matches.ipynb
@@ -143,7 +143,7 @@
     {
      "data": {
       "text/plain": [
-       "(1916, 27)"
+       "(1936, 27)"
       ]
      },
      "execution_count": 8,
@@ -166,7 +166,7 @@
       "text/plain": [
        "2023    760\n",
        "2022    760\n",
-       "2024    396\n",
+       "2024    416\n",
        "Name: Season, dtype: int64"
       ]
      },
@@ -188,26 +188,26 @@
     {
      "data": {
       "text/plain": [
-       "Liverpool                   20\n",
-       "Chelsea                     20\n",
-       "Burnley                     20\n",
-       "Everton                     20\n",
-       "Nottingham Forest           20\n",
-       "Crystal Palace              20\n",
-       "Fulham                      20\n",
-       "Aston Villa                 20\n",
-       "Wolverhampton Wanderers     20\n",
-       "Newcastle United            20\n",
-       "Manchester United           20\n",
-       "Brighton and Hove Albion    20\n",
-       "West Ham United             20\n",
-       "Tottenham Hotspur           20\n",
-       "Arsenal                     20\n",
-       "Sheffield United            20\n",
-       "Bournemouth                 19\n",
-       "Brentford                   19\n",
-       "Luton Town                  19\n",
-       "Manchester City             19\n",
+       "Liverpool                   21\n",
+       "Chelsea                     21\n",
+       "Burnley                     21\n",
+       "Everton                     21\n",
+       "Nottingham Forest           21\n",
+       "Crystal Palace              21\n",
+       "Fulham                      21\n",
+       "Newcastle United            21\n",
+       "Wolverhampton Wanderers     21\n",
+       "Manchester United           21\n",
+       "Brighton and Hove Albion    21\n",
+       "West Ham United             21\n",
+       "Tottenham Hotspur           21\n",
+       "Aston Villa                 21\n",
+       "Arsenal                     21\n",
+       "Sheffield United            21\n",
+       "Manchester City             20\n",
+       "Bournemouth                 20\n",
+       "Brentford                   20\n",
+       "Luton Town                  20\n",
        "Name: Team, dtype: int64"
       ]
      },
@@ -437,7 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "match_df.to_csv('matches.csv', index=False)"
+    "match_df.to_csv('datasets/matches.csv', index=False)"
    ]
   },
   {
