--- a/scraping_team_stats.ipynb
+++ b/scraping_team_stats.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "2afb0959",
    "metadata": {},
    "outputs": [],
@@ -107,11 +107,16 @@
     "    all_stats_2024 = all_stats_2024.drop([\"Last 5\"], axis=1)\n",
     "    all_stats_2023 = stats(\"https://fbref.com/en/comps/9/2022-2023/2022-2023-Premier-League-Stats\", 2023)\n",
     "    all_stats_2022 = stats(\"https://fbref.com/en/comps/9/2021-2022/2021-2022-Premier-League-Stats\", 2022)\n",
-    "    \n",
+    "    all_stats_2021 = stats(\"https://fbref.com/en/comps/9/2020-2021/2020-2021-Premier-League-Stats\", 2021)\n",
+    "    all_stats_2020 = stats(\"https://fbref.com/en/comps/9/2019-2020/2019-2020-Premier-League-Stats\", 2020)\n",
+    "    all_stats_2019 = stats(\"https://fbref.com/en/comps/9/2018-2019/2018-2019-Premier-League-Stats\", 2019)\n",
     "    \n",
     "    overall_stats.append(all_stats_2024)\n",
     "    overall_stats.append(all_stats_2023)\n",
     "    overall_stats.append(all_stats_2022)\n",
+    "    overall_stats.append(all_stats_2021)\n",
+    "    overall_stats.append(all_stats_2020)\n",
+    "    overall_stats.append(all_stats_2019)\n",
     "    \n",
     "    overall_stats_df = pd.concat(overall_stats)\n",
     "    return overall_stats_df\n",
@@ -120,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "815d4b7c",
    "metadata": {},
    "outputs": [],
@@ -130,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "1d6a2e06",
    "metadata": {},
    "outputs": [
@@ -191,160 +196,160 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>Liverpool</td>\n",
-       "      <td>20</td>\n",
-       "      <td>13</td>\n",
+       "      <td>21</td>\n",
+       "      <td>14</td>\n",
        "      <td>6</td>\n",
        "      <td>1</td>\n",
-       "      <td>43</td>\n",
+       "      <td>47</td>\n",
        "      <td>18</td>\n",
-       "      <td>25</td>\n",
-       "      <td>45</td>\n",
-       "      <td>2.25</td>\n",
-       "      <td>44.1</td>\n",
-       "      <td>22.6</td>\n",
-       "      <td>21.5</td>\n",
-       "      <td>1.08</td>\n",
-       "      <td>46872</td>\n",
+       "      <td>29</td>\n",
+       "      <td>48</td>\n",
+       "      <td>2.29</td>\n",
+       "      <td>45.7</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>21.7</td>\n",
+       "      <td>1.03</td>\n",
+       "      <td>52619</td>\n",
        "      <td>Mohamed Salah - 14</td>\n",
        "      <td>Alisson</td>\n",
        "      <td>NaN</td>\n",
        "      <td>60.2</td>\n",
-       "      <td>40</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>30</td>\n",
-       "      <td>1.50</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>6.15</td>\n",
-       "      <td>0.29</td>\n",
-       "      <td>32.9</td>\n",
+       "      <td>44</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>34</td>\n",
+       "      <td>1.62</td>\n",
+       "      <td>38.1</td>\n",
+       "      <td>6.19</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>33.5</td>\n",
        "      <td>2024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>Aston Villa</td>\n",
+       "      <td>Manchester City</td>\n",
        "      <td>20</td>\n",
        "      <td>13</td>\n",
-       "      <td>3</td>\n",
        "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>48</td>\n",
+       "      <td>23</td>\n",
+       "      <td>25</td>\n",
        "      <td>43</td>\n",
-       "      <td>27</td>\n",
-       "      <td>16</td>\n",
-       "      <td>42</td>\n",
-       "      <td>2.10</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>25.6</td>\n",
-       "      <td>10.3</td>\n",
-       "      <td>0.52</td>\n",
-       "      <td>28969</td>\n",
-       "      <td>Ollie Watkins - 9</td>\n",
-       "      <td>Emiliano Martínez</td>\n",
+       "      <td>2.15</td>\n",
+       "      <td>39.7</td>\n",
+       "      <td>19.1</td>\n",
+       "      <td>20.6</td>\n",
+       "      <td>1.03</td>\n",
+       "      <td>53297</td>\n",
+       "      <td>Erling Haaland - 14</td>\n",
+       "      <td>Ederson</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>54.6</td>\n",
-       "      <td>40</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>30</td>\n",
-       "      <td>1.50</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>5.10</td>\n",
-       "      <td>0.35</td>\n",
-       "      <td>35.3</td>\n",
+       "      <td>64.1</td>\n",
+       "      <td>47</td>\n",
+       "      <td>2.35</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1.75</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>6.50</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>39.0</td>\n",
        "      <td>2024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>Manchester City</td>\n",
-       "      <td>19</td>\n",
-       "      <td>12</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>45</td>\n",
+       "      <td>Arsenal</td>\n",
        "      <td>21</td>\n",
-       "      <td>24</td>\n",
-       "      <td>40</td>\n",
-       "      <td>2.11</td>\n",
-       "      <td>36.8</td>\n",
-       "      <td>17.8</td>\n",
-       "      <td>18.9</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>47396</td>\n",
-       "      <td>Erling Haaland - 14</td>\n",
-       "      <td>Ederson</td>\n",
+       "      <td>13</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>42</td>\n",
+       "      <td>20</td>\n",
+       "      <td>22</td>\n",
+       "      <td>43</td>\n",
+       "      <td>2.05</td>\n",
+       "      <td>39.4</td>\n",
+       "      <td>16.7</td>\n",
+       "      <td>22.7</td>\n",
+       "      <td>1.08</td>\n",
+       "      <td>60180</td>\n",
+       "      <td>Bukayo Saka - 6</td>\n",
+       "      <td>David Raya</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>63.6</td>\n",
-       "      <td>44</td>\n",
-       "      <td>2.32</td>\n",
-       "      <td>32</td>\n",
-       "      <td>1.68</td>\n",
-       "      <td>26.3</td>\n",
-       "      <td>6.26</td>\n",
-       "      <td>0.34</td>\n",
-       "      <td>38.9</td>\n",
+       "      <td>60.3</td>\n",
+       "      <td>41</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>27</td>\n",
+       "      <td>1.29</td>\n",
+       "      <td>38.1</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>30.9</td>\n",
        "      <td>2024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>20</td>\n",
-       "      <td>12</td>\n",
+       "      <td>Aston Villa</td>\n",
+       "      <td>21</td>\n",
+       "      <td>13</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
-       "      <td>37</td>\n",
-       "      <td>20</td>\n",
-       "      <td>17</td>\n",
-       "      <td>40</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>36.4</td>\n",
-       "      <td>16.3</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>60169</td>\n",
-       "      <td>Bukayo Saka - 6</td>\n",
-       "      <td>David Raya</td>\n",
+       "      <td>43</td>\n",
+       "      <td>27</td>\n",
+       "      <td>16</td>\n",
+       "      <td>43</td>\n",
+       "      <td>2.05</td>\n",
+       "      <td>37.2</td>\n",
+       "      <td>26.7</td>\n",
+       "      <td>10.4</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>41495</td>\n",
+       "      <td>Ollie Watkins - 9</td>\n",
+       "      <td>Emiliano Martínez</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>60.3</td>\n",
-       "      <td>36</td>\n",
-       "      <td>1.80</td>\n",
-       "      <td>23</td>\n",
-       "      <td>1.15</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>4.90</td>\n",
-       "      <td>0.31</td>\n",
-       "      <td>30.7</td>\n",
+       "      <td>55.2</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1.43</td>\n",
+       "      <td>23.8</td>\n",
+       "      <td>5.05</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>34.8</td>\n",
        "      <td>2024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>Tottenham</td>\n",
-       "      <td>20</td>\n",
+       "      <td>21</td>\n",
        "      <td>12</td>\n",
-       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "      <td>5</td>\n",
-       "      <td>42</td>\n",
-       "      <td>29</td>\n",
+       "      <td>44</td>\n",
+       "      <td>31</td>\n",
        "      <td>13</td>\n",
-       "      <td>39</td>\n",
-       "      <td>1.95</td>\n",
-       "      <td>35.2</td>\n",
-       "      <td>34.7</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.02</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>36.4</td>\n",
+       "      <td>35.5</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.04</td>\n",
        "      <td>61624</td>\n",
        "      <td>Son Heung-min - 12</td>\n",
        "      <td>Guglielmo Vicario</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>59.2</td>\n",
-       "      <td>39</td>\n",
+       "      <td>59.3</td>\n",
+       "      <td>41</td>\n",
        "      <td>1.95</td>\n",
-       "      <td>34</td>\n",
-       "      <td>1.70</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>5.85</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>36.7</td>\n",
+       "      <td>36</td>\n",
+       "      <td>1.71</td>\n",
+       "      <td>23.8</td>\n",
+       "      <td>5.81</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>36.4</td>\n",
        "      <td>2024</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -353,28 +358,28 @@
       ],
       "text/plain": [
        "   Rk            Squad  MP   W  D  L  GF  GA  GD  Pts  Pts/MP    xG   xGA  \\\n",
-       "0   1        Liverpool  20  13  6  1  43  18  25   45    2.25  44.1  22.6   \n",
-       "1   2      Aston Villa  20  13  3  4  43  27  16   42    2.10  36.0  25.6   \n",
-       "2   3  Manchester City  19  12  4  3  45  21  24   40    2.11  36.8  17.8   \n",
-       "3   4          Arsenal  20  12  4  4  37  20  17   40    2.00  36.4  16.3   \n",
-       "4   5        Tottenham  20  12  3  5  42  29  13   39    1.95  35.2  34.7   \n",
+       "0   1        Liverpool  21  14  6  1  47  18  29   48    2.29  45.7  24.0   \n",
+       "1   2  Manchester City  20  13  4  3  48  23  25   43    2.15  39.7  19.1   \n",
+       "2   3          Arsenal  21  13  4  4  42  20  22   43    2.05  39.4  16.7   \n",
+       "3   4      Aston Villa  21  13  4  4  43  27  16   43    2.05  37.2  26.7   \n",
+       "4   5        Tottenham  21  12  4  5  44  31  13   40    1.90  36.4  35.5   \n",
        "\n",
        "    xGD  xGD/90  Attendance      Top Team Scorer         Goalkeeper Notes  \\\n",
-       "0  21.5    1.08       46872   Mohamed Salah - 14            Alisson   NaN   \n",
-       "1  10.3    0.52       28969    Ollie Watkins - 9  Emiliano Martínez   NaN   \n",
-       "2  18.9    1.00       47396  Erling Haaland - 14            Ederson   NaN   \n",
-       "3  20.0    1.00       60169      Bukayo Saka - 6         David Raya   NaN   \n",
-       "4   0.4    0.02       61624   Son Heung-min - 12  Guglielmo Vicario   NaN   \n",
+       "0  21.7    1.03       52619   Mohamed Salah - 14            Alisson   NaN   \n",
+       "1  20.6    1.03       53297  Erling Haaland - 14            Ederson   NaN   \n",
+       "2  22.7    1.08       60180      Bukayo Saka - 6         David Raya   NaN   \n",
+       "3  10.4    0.50       41495    Ollie Watkins - 9  Emiliano Martínez   NaN   \n",
+       "4   0.9    0.04       61624   Son Heung-min - 12  Guglielmo Vicario   NaN   \n",
        "\n",
        "   Poss  Gls   Gls  Ast   Ast   CS%  SoT/90  G/SoT  SoT%  Season  \n",
-       "0  60.2   40  2.00   30  1.50  35.0    6.15   0.29  32.9    2024  \n",
-       "1  54.6   40  2.00   30  1.50  20.0    5.10   0.35  35.3    2024  \n",
-       "2  63.6   44  2.32   32  1.68  26.3    6.26   0.34  38.9    2024  \n",
-       "3  60.3   36  1.80   23  1.15  35.0    4.90   0.31  30.7    2024  \n",
-       "4  59.2   39  1.95   34  1.70  25.0    5.85   0.32  36.7    2024  "
+       "0  60.2   44  2.10   34  1.62  38.1    6.19   0.31  33.5    2024  \n",
+       "1  64.1   47  2.35   35  1.75  25.0    6.50   0.33  39.0    2024  \n",
+       "2  60.3   41  1.95   27  1.29  38.1    5.00   0.33  30.9    2024  \n",
+       "3  55.2   40  1.90   30  1.43  23.8    5.05   0.34  34.8    2024  \n",
+       "4  59.3   41  1.95   36  1.71  23.8    5.81   0.33  36.4    2024  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,12 +390,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
+   "id": "870bb09f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(180, 29)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "overall_stats_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "3592db13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "overall_stats_df.to_csv(\"overall_stats.csv\", index=False)"
+    "overall_stats_df.to_csv(\"datasets/overall_stats.csv\", index=False)"
    ]
   },
   {
