--- a/scraping_team_stats.ipynb
+++ b/scraping_team_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "276e8ff9",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "81f6396f",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
        "[2024, 2023, 2022]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "4bd7e9ac",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "bc5e5301",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "2afb0959",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "815d4b7c",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "id": "1d6a2e06",
    "metadata": {},
    "outputs": [
@@ -379,7 +379,7 @@
        "4  59.3   41  1.95   36  1.71  23.8    5.81   0.33  36.4    2024  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,17 +390,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "870bb09f",
+   "execution_count": 24,
+   "id": "f3c97799",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(180, 29)"
+       "(120, 29)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,12 +411,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "id": "3592db13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "overall_stats_df.to_csv(\"datasets/overall_stats.csv\", index=False)"
+    "overall_stats_df.to_csv(\"datasets/overall_stats2.csv\", index=False)"
    ]
   },
   {
