--- a/notebooks/scraping_matches.ipynb
+++ b/notebooks/scraping_matches.ipynb
@@ -143,7 +143,7 @@
     {
      "data": {
       "text/plain": [
-       "(1936, 27)"
+       "(1956, 27)"
       ]
      },
      "execution_count": 8,
@@ -166,7 +166,7 @@
       "text/plain": [
        "2023    760\n",
        "2022    760\n",
-       "2024    416\n",
+       "2024    436\n",
        "Name: Season, dtype: int64"
       ]
      },
@@ -188,26 +188,26 @@
     {
      "data": {
       "text/plain": [
-       "Liverpool                   21\n",
-       "Chelsea                     21\n",
-       "Burnley                     21\n",
-       "Everton                     21\n",
-       "Nottingham Forest           21\n",
-       "Crystal Palace              21\n",
-       "Fulham                      21\n",
-       "Newcastle United            21\n",
-       "Wolverhampton Wanderers     21\n",
-       "Manchester United           21\n",
-       "Brighton and Hove Albion    21\n",
-       "West Ham United             21\n",
-       "Tottenham Hotspur           21\n",
-       "Aston Villa                 21\n",
-       "Arsenal                     21\n",
-       "Sheffield United            21\n",
-       "Manchester City             20\n",
-       "Bournemouth                 20\n",
-       "Brentford                   20\n",
-       "Luton Town                  20\n",
+       "Liverpool                   22\n",
+       "Brighton and Hove Albion    22\n",
+       "Burnley                     22\n",
+       "Everton                     22\n",
+       "Nottingham Forest           22\n",
+       "Crystal Palace              22\n",
+       "Fulham                      22\n",
+       "Chelsea                     22\n",
+       "Wolverhampton Wanderers     22\n",
+       "Newcastle United            22\n",
+       "Manchester United           22\n",
+       "West Ham United             22\n",
+       "Aston Villa                 22\n",
+       "Tottenham Hotspur           22\n",
+       "Arsenal                     22\n",
+       "Sheffield United            22\n",
+       "Manchester City             21\n",
+       "Bournemouth                 21\n",
+       "Brentford                   21\n",
+       "Luton Town                  21\n",
        "Name: Team, dtype: int64"
       ]
      },
@@ -437,7 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "match_df.to_csv('matches.csv', index=False)"
+    "match_df.to_csv('../datasets/matches.csv', index=False)"
    ]
   },
   {
