--- a/notebooks/scraping_team_stats.ipynb
+++ b/notebooks/scraping_team_stats.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "2afb0959",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "815d4b7c",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "1d6a2e06",
    "metadata": {},
    "outputs": [
@@ -196,160 +196,160 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>Liverpool</td>\n",
-       "      <td>21</td>\n",
-       "      <td>14</td>\n",
+       "      <td>22</td>\n",
+       "      <td>15</td>\n",
        "      <td>6</td>\n",
        "      <td>1</td>\n",
-       "      <td>47</td>\n",
-       "      <td>18</td>\n",
-       "      <td>29</td>\n",
-       "      <td>48</td>\n",
-       "      <td>2.29</td>\n",
-       "      <td>45.7</td>\n",
+       "      <td>51</td>\n",
+       "      <td>19</td>\n",
+       "      <td>32</td>\n",
+       "      <td>51</td>\n",
+       "      <td>2.32</td>\n",
+       "      <td>48.6</td>\n",
+       "      <td>24.6</td>\n",
        "      <td>24.0</td>\n",
-       "      <td>21.7</td>\n",
-       "      <td>1.03</td>\n",
-       "      <td>52619</td>\n",
+       "      <td>1.09</td>\n",
+       "      <td>47835</td>\n",
        "      <td>Mohamed Salah - 14</td>\n",
        "      <td>Alisson</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>60.2</td>\n",
-       "      <td>44</td>\n",
-       "      <td>2.10</td>\n",
-       "      <td>34</td>\n",
-       "      <td>1.62</td>\n",
-       "      <td>38.1</td>\n",
-       "      <td>6.19</td>\n",
+       "      <td>59.7</td>\n",
+       "      <td>48</td>\n",
+       "      <td>2.18</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1.73</td>\n",
+       "      <td>36.4</td>\n",
+       "      <td>6.50</td>\n",
        "      <td>0.31</td>\n",
-       "      <td>33.5</td>\n",
+       "      <td>34.5</td>\n",
        "      <td>2024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>Manchester City</td>\n",
-       "      <td>20</td>\n",
-       "      <td>13</td>\n",
+       "      <td>21</td>\n",
+       "      <td>14</td>\n",
        "      <td>4</td>\n",
        "      <td>3</td>\n",
-       "      <td>48</td>\n",
-       "      <td>23</td>\n",
-       "      <td>25</td>\n",
-       "      <td>43</td>\n",
-       "      <td>2.15</td>\n",
-       "      <td>39.7</td>\n",
-       "      <td>19.1</td>\n",
+       "      <td>51</td>\n",
+       "      <td>24</td>\n",
+       "      <td>27</td>\n",
+       "      <td>46</td>\n",
+       "      <td>2.19</td>\n",
+       "      <td>41.5</td>\n",
        "      <td>20.6</td>\n",
-       "      <td>1.03</td>\n",
-       "      <td>53297</td>\n",
+       "      <td>20.9</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>47967</td>\n",
        "      <td>Erling Haaland - 14</td>\n",
        "      <td>Ederson</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>64.1</td>\n",
-       "      <td>47</td>\n",
-       "      <td>2.35</td>\n",
-       "      <td>35</td>\n",
-       "      <td>1.75</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>6.50</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>39.0</td>\n",
+       "      <td>64.5</td>\n",
+       "      <td>50</td>\n",
+       "      <td>2.38</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1.81</td>\n",
+       "      <td>23.8</td>\n",
+       "      <td>6.38</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>38.6</td>\n",
        "      <td>2024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>Arsenal</td>\n",
-       "      <td>21</td>\n",
-       "      <td>13</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>42</td>\n",
-       "      <td>20</td>\n",
        "      <td>22</td>\n",
-       "      <td>43</td>\n",
-       "      <td>2.05</td>\n",
-       "      <td>39.4</td>\n",
-       "      <td>16.7</td>\n",
-       "      <td>22.7</td>\n",
+       "      <td>14</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>44</td>\n",
+       "      <td>21</td>\n",
+       "      <td>23</td>\n",
+       "      <td>46</td>\n",
+       "      <td>2.09</td>\n",
+       "      <td>40.8</td>\n",
+       "      <td>17.1</td>\n",
+       "      <td>23.7</td>\n",
        "      <td>1.08</td>\n",
        "      <td>60180</td>\n",
-       "      <td>Bukayo Saka - 6</td>\n",
+       "      <td>Bukayo Saka - 7</td>\n",
        "      <td>David Raya</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>60.3</td>\n",
-       "      <td>41</td>\n",
+       "      <td>60.9</td>\n",
+       "      <td>43</td>\n",
        "      <td>1.95</td>\n",
-       "      <td>27</td>\n",
-       "      <td>1.29</td>\n",
-       "      <td>38.1</td>\n",
-       "      <td>5.00</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>30.9</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1.36</td>\n",
+       "      <td>36.4</td>\n",
+       "      <td>4.91</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>30.1</td>\n",
        "      <td>2024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>Aston Villa</td>\n",
-       "      <td>21</td>\n",
+       "      <td>Tottenham</td>\n",
+       "      <td>22</td>\n",
        "      <td>13</td>\n",
        "      <td>4</td>\n",
-       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>47</td>\n",
+       "      <td>33</td>\n",
+       "      <td>14</td>\n",
        "      <td>43</td>\n",
-       "      <td>27</td>\n",
-       "      <td>16</td>\n",
-       "      <td>43</td>\n",
-       "      <td>2.05</td>\n",
-       "      <td>37.2</td>\n",
-       "      <td>26.7</td>\n",
-       "      <td>10.4</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>41495</td>\n",
-       "      <td>Ollie Watkins - 9</td>\n",
-       "      <td>Emiliano Martínez</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>39.3</td>\n",
+       "      <td>37.1</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>61586</td>\n",
+       "      <td>Son Heung-min - 12</td>\n",
+       "      <td>Guglielmo Vicario</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>55.2</td>\n",
-       "      <td>40</td>\n",
-       "      <td>1.90</td>\n",
-       "      <td>30</td>\n",
-       "      <td>1.43</td>\n",
-       "      <td>23.8</td>\n",
-       "      <td>5.05</td>\n",
+       "      <td>59.7</td>\n",
+       "      <td>44</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>37</td>\n",
+       "      <td>1.68</td>\n",
+       "      <td>22.7</td>\n",
+       "      <td>5.77</td>\n",
        "      <td>0.34</td>\n",
-       "      <td>34.8</td>\n",
+       "      <td>35.9</td>\n",
        "      <td>2024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>Tottenham</td>\n",
-       "      <td>21</td>\n",
-       "      <td>12</td>\n",
+       "      <td>Aston Villa</td>\n",
+       "      <td>22</td>\n",
+       "      <td>13</td>\n",
        "      <td>4</td>\n",
        "      <td>5</td>\n",
        "      <td>44</td>\n",
-       "      <td>31</td>\n",
-       "      <td>13</td>\n",
-       "      <td>40</td>\n",
-       "      <td>1.90</td>\n",
-       "      <td>36.4</td>\n",
-       "      <td>35.5</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>61624</td>\n",
-       "      <td>Son Heung-min - 12</td>\n",
-       "      <td>Guglielmo Vicario</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>59.3</td>\n",
-       "      <td>41</td>\n",
+       "      <td>30</td>\n",
+       "      <td>14</td>\n",
+       "      <td>43</td>\n",
        "      <td>1.95</td>\n",
-       "      <td>36</td>\n",
-       "      <td>1.71</td>\n",
-       "      <td>23.8</td>\n",
-       "      <td>5.81</td>\n",
+       "      <td>38.6</td>\n",
+       "      <td>29.3</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>41558</td>\n",
+       "      <td>Ollie Watkins - 10</td>\n",
+       "      <td>Emiliano Martínez</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>55.5</td>\n",
+       "      <td>41</td>\n",
+       "      <td>1.86</td>\n",
+       "      <td>31</td>\n",
+       "      <td>1.41</td>\n",
+       "      <td>22.7</td>\n",
+       "      <td>5.05</td>\n",
        "      <td>0.33</td>\n",
-       "      <td>36.4</td>\n",
+       "      <td>35.0</td>\n",
        "      <td>2024</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -358,28 +358,28 @@
       ],
       "text/plain": [
        "   Rk            Squad  MP   W  D  L  GF  GA  GD  Pts  Pts/MP    xG   xGA  \\\n",
-       "0   1        Liverpool  21  14  6  1  47  18  29   48    2.29  45.7  24.0   \n",
-       "1   2  Manchester City  20  13  4  3  48  23  25   43    2.15  39.7  19.1   \n",
-       "2   3          Arsenal  21  13  4  4  42  20  22   43    2.05  39.4  16.7   \n",
-       "3   4      Aston Villa  21  13  4  4  43  27  16   43    2.05  37.2  26.7   \n",
-       "4   5        Tottenham  21  12  4  5  44  31  13   40    1.90  36.4  35.5   \n",
+       "0   1        Liverpool  22  15  6  1  51  19  32   51    2.32  48.6  24.6   \n",
+       "1   2  Manchester City  21  14  4  3  51  24  27   46    2.19  41.5  20.6   \n",
+       "2   3          Arsenal  22  14  4  4  44  21  23   46    2.09  40.8  17.1   \n",
+       "3   4        Tottenham  22  13  4  5  47  33  14   43    1.95  39.3  37.1   \n",
+       "4   5      Aston Villa  22  13  4  5  44  30  14   43    1.95  38.6  29.3   \n",
        "\n",
        "    xGD  xGD/90  Attendance      Top Team Scorer         Goalkeeper Notes  \\\n",
-       "0  21.7    1.03       52619   Mohamed Salah - 14            Alisson   NaN   \n",
-       "1  20.6    1.03       53297  Erling Haaland - 14            Ederson   NaN   \n",
-       "2  22.7    1.08       60180      Bukayo Saka - 6         David Raya   NaN   \n",
-       "3  10.4    0.50       41495    Ollie Watkins - 9  Emiliano Martínez   NaN   \n",
-       "4   0.9    0.04       61624   Son Heung-min - 12  Guglielmo Vicario   NaN   \n",
+       "0  24.0    1.09       47835   Mohamed Salah - 14            Alisson   NaN   \n",
+       "1  20.9    1.00       47967  Erling Haaland - 14            Ederson   NaN   \n",
+       "2  23.7    1.08       60180      Bukayo Saka - 7         David Raya   NaN   \n",
+       "3   2.2    0.10       61586   Son Heung-min - 12  Guglielmo Vicario   NaN   \n",
+       "4   9.3    0.42       41558   Ollie Watkins - 10  Emiliano Martínez   NaN   \n",
        "\n",
        "   Poss  Gls   Gls  Ast   Ast   CS%  SoT/90  G/SoT  SoT%  Season  \n",
-       "0  60.2   44  2.10   34  1.62  38.1    6.19   0.31  33.5    2024  \n",
-       "1  64.1   47  2.35   35  1.75  25.0    6.50   0.33  39.0    2024  \n",
-       "2  60.3   41  1.95   27  1.29  38.1    5.00   0.33  30.9    2024  \n",
-       "3  55.2   40  1.90   30  1.43  23.8    5.05   0.34  34.8    2024  \n",
-       "4  59.3   41  1.95   36  1.71  23.8    5.81   0.33  36.4    2024  "
+       "0  59.7   48  2.18   38  1.73  36.4    6.50   0.31  34.5    2024  \n",
+       "1  64.5   50  2.38   38  1.81  23.8    6.38   0.34  38.6    2024  \n",
+       "2  60.9   43  1.95   30  1.36  36.4    4.91   0.34  30.1    2024  \n",
+       "3  59.7   44  2.00   37  1.68  22.7    5.77   0.34  35.9    2024  \n",
+       "4  55.5   41  1.86   31  1.41  22.7    5.05   0.33  35.0    2024  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,17 +390,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "7cbe3ef6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(180, 29)"
+       "(120, 29)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,12 +411,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "3592db13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "overall_stats_df.to_csv(\"overall_stats.csv\", index=False)"
+    "overall_stats_df.to_csv(\"../datasets/overall_stats2.csv\", index=False)"
    ]
   },
   {
