--- a/notebooks/scraping_matches.ipynb
+++ b/notebooks/scraping_matches.ipynb
@@ -143,7 +143,7 @@
     {
      "data": {
       "text/plain": [
-       "(2056, 27)"
+       "(2146, 27)"
       ]
      },
      "execution_count": 8,
@@ -166,7 +166,7 @@
       "text/plain": [
        "2023    760\n",
        "2022    760\n",
-       "2024    536\n",
+       "2024    626\n",
        "Name: Season, dtype: int64"
       ]
      },
@@ -188,26 +188,26 @@
     {
      "data": {
       "text/plain": [
-       "Liverpool                   27\n",
-       "Wolverhampton Wanderers     27\n",
-       "Burnley                     27\n",
-       "Nottingham Forest           27\n",
-       "Everton                     27\n",
-       "Brentford                   27\n",
-       "Crystal Palace              27\n",
-       "Fulham                      27\n",
-       "Manchester City             27\n",
-       "Sheffield United            27\n",
-       "Brighton and Hove Albion    27\n",
-       "Newcastle United            27\n",
-       "West Ham United             27\n",
-       "Manchester United           27\n",
-       "Aston Villa                 27\n",
-       "Arsenal                     27\n",
-       "Bournemouth                 26\n",
-       "Tottenham Hotspur           26\n",
-       "Luton Town                  26\n",
-       "Chelsea                     26\n",
+       "Burnley                     32\n",
+       "Luton Town                  32\n",
+       "Aston Villa                 32\n",
+       "Nottingham Forest           32\n",
+       "West Ham United             32\n",
+       "Brentford                   32\n",
+       "Fulham                      32\n",
+       "Arsenal                     31\n",
+       "Bournemouth                 31\n",
+       "Everton                     31\n",
+       "Crystal Palace              31\n",
+       "Wolverhampton Wanderers     31\n",
+       "Liverpool                   31\n",
+       "Brighton and Hove Albion    31\n",
+       "Newcastle United            31\n",
+       "Manchester United           31\n",
+       "Tottenham Hotspur           31\n",
+       "Manchester City             31\n",
+       "Sheffield United            31\n",
+       "Chelsea                     30\n",
        "Name: Team, dtype: int64"
       ]
      },
@@ -272,124 +272,124 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2023-08-13</td>\n",
-       "      <td>16:30</td>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-08-12</td>\n",
+       "      <td>12:30</td>\n",
        "      <td>Premier League</td>\n",
        "      <td>Matchweek 1</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>Away</td>\n",
-       "      <td>D</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Chelsea</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>W</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Nott'ham Forest</td>\n",
        "      <td>...</td>\n",
        "      <td>Match Report</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>17.8</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>19.1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>2024</td>\n",
-       "      <td>Liverpool</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2023-08-19</td>\n",
-       "      <td>15:00</td>\n",
-       "      <td>Premier League</td>\n",
-       "      <td>Matchweek 2</td>\n",
-       "      <td>Sat</td>\n",
-       "      <td>Home</td>\n",
-       "      <td>W</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Bournemouth</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Match Report</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>16.8</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>Liverpool</td>\n",
+       "      <td>Arsenal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2023-08-27</td>\n",
-       "      <td>16:30</td>\n",
+       "      <td>2023-08-21</td>\n",
+       "      <td>20:00</td>\n",
        "      <td>Premier League</td>\n",
-       "      <td>Matchweek 3</td>\n",
-       "      <td>Sun</td>\n",
+       "      <td>Matchweek 2</td>\n",
+       "      <td>Mon</td>\n",
        "      <td>Away</td>\n",
        "      <td>W</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Newcastle Utd</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Crystal Palace</td>\n",
        "      <td>...</td>\n",
        "      <td>Match Report</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>17.2</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>16.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>2024</td>\n",
-       "      <td>Liverpool</td>\n",
+       "      <td>Arsenal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>2023-08-26</td>\n",
+       "      <td>15:00</td>\n",
+       "      <td>Premier League</td>\n",
+       "      <td>Matchweek 3</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>D</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Fulham</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Match Report</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>13.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Arsenal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>2023-09-03</td>\n",
-       "      <td>14:00</td>\n",
+       "      <td>16:30</td>\n",
        "      <td>Premier League</td>\n",
        "      <td>Matchweek 4</td>\n",
        "      <td>Sun</td>\n",
        "      <td>Home</td>\n",
        "      <td>W</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Aston Villa</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Manchester Utd</td>\n",
        "      <td>...</td>\n",
        "      <td>Match Report</td>\n",
        "      <td>NaN</td>\n",
        "      <td>17.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>14.7</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>15.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>2024</td>\n",
-       "      <td>Liverpool</td>\n",
+       "      <td>Arsenal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2023-09-16</td>\n",
-       "      <td>12:30</td>\n",
+       "      <th>5</th>\n",
+       "      <td>2023-09-17</td>\n",
+       "      <td>16:30</td>\n",
        "      <td>Premier League</td>\n",
        "      <td>Matchweek 5</td>\n",
-       "      <td>Sat</td>\n",
+       "      <td>Sun</td>\n",
        "      <td>Away</td>\n",
        "      <td>W</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Wolves</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Everton</td>\n",
        "      <td>...</td>\n",
        "      <td>Match Report</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>15.8</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>17.4</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>2024</td>\n",
-       "      <td>Liverpool</td>\n",
+       "      <td>Arsenal</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -397,26 +397,26 @@
        "</div>"
       ],
       "text/plain": [
-       "         Date   Time            Comp        Round  Day Venue Result   GF   GA  \\\n",
-       "0  2023-08-13  16:30  Premier League  Matchweek 1  Sun  Away      D  1.0  1.0   \n",
-       "1  2023-08-19  15:00  Premier League  Matchweek 2  Sat  Home      W  3.0  1.0   \n",
-       "2  2023-08-27  16:30  Premier League  Matchweek 3  Sun  Away      W  2.0  1.0   \n",
-       "3  2023-09-03  14:00  Premier League  Matchweek 4  Sun  Home      W  3.0  0.0   \n",
-       "4  2023-09-16  12:30  Premier League  Matchweek 5  Sat  Away      W  3.0  1.0   \n",
+       "         Date   Time            Comp        Round  Day Venue Result GF GA  \\\n",
+       "1  2023-08-12  12:30  Premier League  Matchweek 1  Sat  Home      W  2  1   \n",
+       "2  2023-08-21  20:00  Premier League  Matchweek 2  Mon  Away      W  1  0   \n",
+       "3  2023-08-26  15:00  Premier League  Matchweek 3  Sat  Home      D  2  2   \n",
+       "4  2023-09-03  16:30  Premier League  Matchweek 4  Sun  Home      W  3  1   \n",
+       "5  2023-09-17  16:30  Premier League  Matchweek 5  Sun  Away      W  1  0   \n",
        "\n",
-       "        Opponent  ...  Match Report  Notes    Sh  SoT  Dist   FK PK PKatt  \\\n",
-       "0        Chelsea  ...  Match Report    NaN  13.0  1.0  17.8  0.0  0     0   \n",
-       "1    Bournemouth  ...  Match Report    NaN  25.0  9.0  16.8  1.0  0     1   \n",
-       "2  Newcastle Utd  ...  Match Report    NaN   9.0  4.0  17.2  1.0  0     0   \n",
-       "3    Aston Villa  ...  Match Report    NaN  17.0  4.0  14.7  0.0  0     0   \n",
-       "4         Wolves  ...  Match Report    NaN  16.0  5.0  15.8  0.0  0     0   \n",
+       "          Opponent  ...  Match Report  Notes    Sh  SoT  Dist   FK PK PKatt  \\\n",
+       "1  Nott'ham Forest  ...  Match Report    NaN  15.0  7.0  19.1  0.0  0     0   \n",
+       "2   Crystal Palace  ...  Match Report    NaN  13.0  2.0  16.4  0.0  1     1   \n",
+       "3           Fulham  ...  Match Report    NaN  18.0  9.0  13.8  0.0  1     1   \n",
+       "4   Manchester Utd  ...  Match Report    NaN  17.0  5.0  15.0  0.0  0     0   \n",
+       "5          Everton  ...  Match Report    NaN  13.0  4.0  17.4  0.0  0     0   \n",
        "\n",
-       "  Season       Team  \n",
-       "0   2024  Liverpool  \n",
-       "1   2024  Liverpool  \n",
-       "2   2024  Liverpool  \n",
-       "3   2024  Liverpool  \n",
-       "4   2024  Liverpool  \n",
+       "  Season     Team  \n",
+       "1   2024  Arsenal  \n",
+       "2   2024  Arsenal  \n",
+       "3   2024  Arsenal  \n",
+       "4   2024  Arsenal  \n",
+       "5   2024  Arsenal  \n",
        "\n",
        "[5 rows x 27 columns]"
       ]
