final season update

--- a/notebooks/scraping_matches.ipynb
+++ b/notebooks/scraping_matches.ipynb
@@ -143,7 +143,7 @@
     {
      "data": {
       "text/plain": [
-       "(2234, 27)"
+       "(2280, 27)"
       ]
      },
      "execution_count": 8,
@@ -164,9 +164,9 @@
     {
      "data": {
       "text/plain": [
+       "2024    760\n",
        "2023    760\n",
        "2022    760\n",
-       "2024    714\n",
        "Name: Season, dtype: int64"
       ]
      },
@@ -188,26 +188,26 @@
     {
      "data": {
       "text/plain": [
-       "Arsenal                     36\n",
-       "Wolverhampton Wanderers     36\n",
-       "Burnley                     36\n",
-       "Luton Town                  36\n",
-       "Nottingham Forest           36\n",
-       "Brentford                   36\n",
-       "Everton                     36\n",
-       "Crystal Palace              36\n",
-       "Fulham                      36\n",
-       "Sheffield United            36\n",
-       "Bournemouth                 36\n",
-       "West Ham United             36\n",
-       "Aston Villa                 36\n",
-       "Liverpool                   36\n",
-       "Manchester City             35\n",
-       "Manchester United           35\n",
-       "Chelsea                     35\n",
-       "Newcastle United            35\n",
-       "Tottenham Hotspur           35\n",
-       "Brighton and Hove Albion    35\n",
+       "Manchester City             38\n",
+       "Arsenal                     38\n",
+       "Burnley                     38\n",
+       "Luton Town                  38\n",
+       "Nottingham Forest           38\n",
+       "Brentford                   38\n",
+       "Everton                     38\n",
+       "Wolverhampton Wanderers     38\n",
+       "Fulham                      38\n",
+       "Bournemouth                 38\n",
+       "Brighton and Hove Albion    38\n",
+       "Crystal Palace              38\n",
+       "West Ham United             38\n",
+       "Manchester United           38\n",
+       "Newcastle United            38\n",
+       "Chelsea                     38\n",
+       "Tottenham Hotspur           38\n",
+       "Aston Villa                 38\n",
+       "Liverpool                   38\n",
+       "Sheffield United            38\n",
        "Name: Team, dtype: int64"
       ]
      },
@@ -273,123 +273,123 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2023-08-12</td>\n",
-       "      <td>12:30</td>\n",
-       "      <td>Premier League</td>\n",
-       "      <td>Matchweek 1</td>\n",
-       "      <td>Sat</td>\n",
-       "      <td>Home</td>\n",
-       "      <td>W</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Nott'ham Forest</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Match Report</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>19.1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>Arsenal</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2023-08-21</td>\n",
+       "      <td>2023-08-11</td>\n",
        "      <td>20:00</td>\n",
        "      <td>Premier League</td>\n",
-       "      <td>Matchweek 2</td>\n",
-       "      <td>Mon</td>\n",
+       "      <td>Matchweek 1</td>\n",
+       "      <td>Fri</td>\n",
        "      <td>Away</td>\n",
        "      <td>W</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Crystal Palace</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Match Report</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>16.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>Arsenal</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2023-08-26</td>\n",
-       "      <td>15:00</td>\n",
-       "      <td>Premier League</td>\n",
-       "      <td>Matchweek 3</td>\n",
-       "      <td>Sat</td>\n",
-       "      <td>Home</td>\n",
-       "      <td>D</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Fulham</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Match Report</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>13.8</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>Arsenal</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2023-09-03</td>\n",
-       "      <td>16:30</td>\n",
-       "      <td>Premier League</td>\n",
-       "      <td>Matchweek 4</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>Home</td>\n",
-       "      <td>W</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Manchester Utd</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Burnley</td>\n",
        "      <td>...</td>\n",
        "      <td>Match Report</td>\n",
        "      <td>NaN</td>\n",
        "      <td>17.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>15.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>13.9</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>2024</td>\n",
-       "      <td>Arsenal</td>\n",
+       "      <td>Manchester City</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2023-09-17</td>\n",
-       "      <td>16:30</td>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-08-19</td>\n",
+       "      <td>20:00</td>\n",
        "      <td>Premier League</td>\n",
-       "      <td>Matchweek 5</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>Away</td>\n",
+       "      <td>Matchweek 2</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Home</td>\n",
        "      <td>W</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>Everton</td>\n",
+       "      <td>Newcastle Utd</td>\n",
        "      <td>...</td>\n",
        "      <td>Match Report</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>13.0</td>\n",
+       "      <td>14.0</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>17.4</td>\n",
+       "      <td>17.9</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>2024</td>\n",
-       "      <td>Arsenal</td>\n",
+       "      <td>Manchester City</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-08-27</td>\n",
+       "      <td>14:00</td>\n",
+       "      <td>Premier League</td>\n",
+       "      <td>Matchweek 3</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Away</td>\n",
+       "      <td>W</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Sheffield Utd</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Match Report</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Manchester City</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2023-09-02</td>\n",
+       "      <td>15:00</td>\n",
+       "      <td>Premier League</td>\n",
+       "      <td>Matchweek 4</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>W</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Fulham</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Match Report</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>14.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Manchester City</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2023-09-16</td>\n",
+       "      <td>15:00</td>\n",
+       "      <td>Premier League</td>\n",
+       "      <td>Matchweek 5</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Away</td>\n",
+       "      <td>W</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>West Ham</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Match Report</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>16.4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Manchester City</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -398,25 +398,25 @@
       ],
       "text/plain": [
        "         Date   Time            Comp        Round  Day Venue Result GF GA  \\\n",
-       "1  2023-08-12  12:30  Premier League  Matchweek 1  Sat  Home      W  2  1   \n",
-       "2  2023-08-21  20:00  Premier League  Matchweek 2  Mon  Away      W  1  0   \n",
-       "3  2023-08-26  15:00  Premier League  Matchweek 3  Sat  Home      D  2  2   \n",
-       "4  2023-09-03  16:30  Premier League  Matchweek 4  Sun  Home      W  3  1   \n",
-       "5  2023-09-17  16:30  Premier League  Matchweek 5  Sun  Away      W  1  0   \n",
+       "1  2023-08-11  20:00  Premier League  Matchweek 1  Fri  Away      W  3  0   \n",
+       "3  2023-08-19  20:00  Premier League  Matchweek 2  Sat  Home      W  1  0   \n",
+       "4  2023-08-27  14:00  Premier League  Matchweek 3  Sun  Away      W  2  1   \n",
+       "5  2023-09-02  15:00  Premier League  Matchweek 4  Sat  Home      W  5  1   \n",
+       "6  2023-09-16  15:00  Premier League  Matchweek 5  Sat  Away      W  3  1   \n",
        "\n",
-       "          Opponent  ...  Match Report  Notes    Sh  SoT  Dist   FK PK PKatt  \\\n",
-       "1  Nott'ham Forest  ...  Match Report    NaN  15.0  7.0  19.1  0.0  0     0   \n",
-       "2   Crystal Palace  ...  Match Report    NaN  13.0  2.0  16.4  0.0  1     1   \n",
-       "3           Fulham  ...  Match Report    NaN  18.0  9.0  13.8  0.0  1     1   \n",
-       "4   Manchester Utd  ...  Match Report    NaN  17.0  5.0  15.0  0.0  0     0   \n",
-       "5          Everton  ...  Match Report    NaN  13.0  4.0  17.4  0.0  0     0   \n",
+       "        Opponent  ...  Match Report  Notes    Sh   SoT  Dist   FK PK PKatt  \\\n",
+       "1        Burnley  ...  Match Report    NaN  17.0   8.0  13.9  0.0  0     0   \n",
+       "3  Newcastle Utd  ...  Match Report    NaN  14.0   4.0  17.9  0.0  0     0   \n",
+       "4  Sheffield Utd  ...  Match Report    NaN  29.0   9.0  17.3  2.0  0     1   \n",
+       "5         Fulham  ...  Match Report    NaN   6.0   4.0  14.8  0.0  1     1   \n",
+       "6       West Ham  ...  Match Report    NaN  29.0  13.0  16.4  1.0  0     0   \n",
        "\n",
-       "  Season     Team  \n",
-       "1   2024  Arsenal  \n",
-       "2   2024  Arsenal  \n",
-       "3   2024  Arsenal  \n",
-       "4   2024  Arsenal  \n",
-       "5   2024  Arsenal  \n",
+       "  Season             Team  \n",
+       "1   2024  Manchester City  \n",
+       "3   2024  Manchester City  \n",
+       "4   2024  Manchester City  \n",
+       "5   2024  Manchester City  \n",
+       "6   2024  Manchester City  \n",
        "\n",
        "[5 rows x 27 columns]"
       ]
