--- a/notebooks/scraping_team_stats.ipynb
+++ b/notebooks/scraping_team_stats.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "2afb0959",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
     "def concate():\n",
     "    \n",
     "    all_stats_2024 = stats(\"https://fbref.com/en/comps/9/Premier-League-Stats\", 2024)\n",
-    "    all_stats_2024 = all_stats_2024.drop([\"Last 5\"], axis=1)\n",
+    "    #all_stats_2024 = all_stats_2024.drop([\"Last 5\"], axis=1)\n",
     "    all_stats_2023 = stats(\"https://fbref.com/en/comps/9/2022-2023/2022-2023-Premier-League-Stats\", 2023)\n",
     "    all_stats_2022 = stats(\"https://fbref.com/en/comps/9/2021-2022/2021-2022-Premier-League-Stats\", 2022)\n",
     "    all_stats_2021 = stats(\"https://fbref.com/en/comps/9/2020-2021/2020-2021-Premier-League-Stats\", 2021)\n",
@@ -118,14 +118,14 @@
     "    overall_stats.append(all_stats_2020)\n",
     "    overall_stats.append(all_stats_2019)\n",
     "    \n",
-    "    overa ll_stats_df = pd.concat(overall_stats)\n",
+    "    overall_stats_df = pd.concat(overall_stats)\n",
     "    return overall_stats_df\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "815d4b7c",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "1d6a2e06",
    "metadata": {},
    "outputs": [
@@ -195,161 +195,161 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>36</td>\n",
-       "      <td>26</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>88</td>\n",
+       "      <td>Manchester City</td>\n",
+       "      <td>38</td>\n",
        "      <td>28</td>\n",
-       "      <td>60</td>\n",
-       "      <td>83</td>\n",
-       "      <td>2.31</td>\n",
-       "      <td>71.7</td>\n",
-       "      <td>26.8</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>96</td>\n",
+       "      <td>34</td>\n",
+       "      <td>62</td>\n",
+       "      <td>91</td>\n",
+       "      <td>2.39</td>\n",
+       "      <td>80.5</td>\n",
+       "      <td>35.6</td>\n",
        "      <td>44.9</td>\n",
-       "      <td>1.25</td>\n",
-       "      <td>60232</td>\n",
-       "      <td>Bukayo Saka - 16</td>\n",
-       "      <td>David Raya</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>58.3</td>\n",
-       "      <td>83</td>\n",
-       "      <td>2.31</td>\n",
-       "      <td>59</td>\n",
-       "      <td>1.64</td>\n",
-       "      <td>47.2</td>\n",
-       "      <td>5.53</td>\n",
-       "      <td>0.37</td>\n",
-       "      <td>32.6</td>\n",
+       "      <td>1.18</td>\n",
+       "      <td>53012</td>\n",
+       "      <td>Erling Haaland - 27</td>\n",
+       "      <td>Ederson</td>\n",
+       "      <td>→ Champions League via league finish</td>\n",
+       "      <td>65.2</td>\n",
+       "      <td>94</td>\n",
+       "      <td>2.47</td>\n",
+       "      <td>69</td>\n",
+       "      <td>1.82</td>\n",
+       "      <td>34.2</td>\n",
+       "      <td>6.95</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>38.7</td>\n",
        "      <td>2024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>Manchester City</td>\n",
-       "      <td>35</td>\n",
-       "      <td>25</td>\n",
-       "      <td>7</td>\n",
-       "      <td>3</td>\n",
-       "      <td>87</td>\n",
-       "      <td>33</td>\n",
-       "      <td>54</td>\n",
-       "      <td>82</td>\n",
-       "      <td>2.34</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>33.5</td>\n",
-       "      <td>39.6</td>\n",
-       "      <td>1.13</td>\n",
-       "      <td>49983</td>\n",
-       "      <td>Erling Haaland - 25</td>\n",
-       "      <td>Ederson</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>65.6</td>\n",
-       "      <td>85</td>\n",
-       "      <td>2.43</td>\n",
+       "      <td>Arsenal</td>\n",
+       "      <td>38</td>\n",
+       "      <td>28</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>91</td>\n",
+       "      <td>29</td>\n",
        "      <td>62</td>\n",
-       "      <td>1.77</td>\n",
-       "      <td>31.4</td>\n",
-       "      <td>6.86</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>37.9</td>\n",
+       "      <td>89</td>\n",
+       "      <td>2.34</td>\n",
+       "      <td>76.1</td>\n",
+       "      <td>27.9</td>\n",
+       "      <td>48.2</td>\n",
+       "      <td>1.27</td>\n",
+       "      <td>60236</td>\n",
+       "      <td>Bukayo Saka - 16</td>\n",
+       "      <td>David Raya</td>\n",
+       "      <td>→ Champions League via league finish</td>\n",
+       "      <td>58.2</td>\n",
+       "      <td>86</td>\n",
+       "      <td>2.26</td>\n",
+       "      <td>62</td>\n",
+       "      <td>1.63</td>\n",
+       "      <td>47.4</td>\n",
+       "      <td>5.50</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>32.3</td>\n",
        "      <td>2024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>Liverpool</td>\n",
-       "      <td>36</td>\n",
-       "      <td>23</td>\n",
-       "      <td>9</td>\n",
-       "      <td>4</td>\n",
-       "      <td>81</td>\n",
        "      <td>38</td>\n",
-       "      <td>43</td>\n",
-       "      <td>78</td>\n",
-       "      <td>2.17</td>\n",
-       "      <td>81.5</td>\n",
-       "      <td>42.1</td>\n",
-       "      <td>39.4</td>\n",
-       "      <td>1.09</td>\n",
-       "      <td>52415</td>\n",
+       "      <td>24</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>86</td>\n",
+       "      <td>41</td>\n",
+       "      <td>45</td>\n",
+       "      <td>82</td>\n",
+       "      <td>2.16</td>\n",
+       "      <td>87.8</td>\n",
+       "      <td>45.7</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>1.11</td>\n",
+       "      <td>55979</td>\n",
        "      <td>Mohamed Salah - 18</td>\n",
        "      <td>Alisson</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>61.2</td>\n",
-       "      <td>76</td>\n",
+       "      <td>→ Champions League via league finish</td>\n",
+       "      <td>61.3</td>\n",
+       "      <td>80</td>\n",
        "      <td>2.11</td>\n",
-       "      <td>58</td>\n",
-       "      <td>1.61</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>6.75</td>\n",
-       "      <td>0.29</td>\n",
-       "      <td>33.2</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1.58</td>\n",
+       "      <td>26.3</td>\n",
+       "      <td>6.92</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>33.7</td>\n",
        "      <td>2024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>Aston Villa</td>\n",
-       "      <td>36</td>\n",
+       "      <td>38</td>\n",
        "      <td>20</td>\n",
-       "      <td>7</td>\n",
-       "      <td>9</td>\n",
-       "      <td>73</td>\n",
-       "      <td>53</td>\n",
-       "      <td>20</td>\n",
-       "      <td>67</td>\n",
-       "      <td>1.86</td>\n",
-       "      <td>59.4</td>\n",
-       "      <td>55.7</td>\n",
-       "      <td>3.7</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>41837</td>\n",
+       "      <td>8</td>\n",
+       "      <td>10</td>\n",
+       "      <td>76</td>\n",
+       "      <td>61</td>\n",
+       "      <td>15</td>\n",
+       "      <td>68</td>\n",
+       "      <td>1.79</td>\n",
+       "      <td>63.3</td>\n",
+       "      <td>59.9</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>41858</td>\n",
        "      <td>Ollie Watkins - 19</td>\n",
        "      <td>Emiliano Martínez</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>53.6</td>\n",
-       "      <td>69</td>\n",
-       "      <td>1.92</td>\n",
-       "      <td>52</td>\n",
-       "      <td>1.44</td>\n",
-       "      <td>22.2</td>\n",
-       "      <td>4.86</td>\n",
+       "      <td>→ Champions League via league finish</td>\n",
+       "      <td>53.1</td>\n",
+       "      <td>72</td>\n",
+       "      <td>1.89</td>\n",
+       "      <td>55</td>\n",
+       "      <td>1.45</td>\n",
+       "      <td>21.1</td>\n",
+       "      <td>4.79</td>\n",
        "      <td>0.37</td>\n",
-       "      <td>36.2</td>\n",
+       "      <td>35.6</td>\n",
        "      <td>2024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>Tottenham</td>\n",
-       "      <td>35</td>\n",
-       "      <td>18</td>\n",
+       "      <td>38</td>\n",
+       "      <td>20</td>\n",
        "      <td>6</td>\n",
-       "      <td>11</td>\n",
-       "      <td>69</td>\n",
-       "      <td>58</td>\n",
-       "      <td>11</td>\n",
-       "      <td>60</td>\n",
-       "      <td>1.71</td>\n",
-       "      <td>60.7</td>\n",
-       "      <td>59.3</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>61526</td>\n",
+       "      <td>12</td>\n",
+       "      <td>74</td>\n",
+       "      <td>61</td>\n",
+       "      <td>13</td>\n",
+       "      <td>66</td>\n",
+       "      <td>1.74</td>\n",
+       "      <td>68.2</td>\n",
+       "      <td>63.4</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>61482</td>\n",
        "      <td>Son Heung-min - 17</td>\n",
        "      <td>Guglielmo Vicario</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>61.4</td>\n",
-       "      <td>64</td>\n",
-       "      <td>1.83</td>\n",
-       "      <td>53</td>\n",
-       "      <td>1.51</td>\n",
-       "      <td>17.1</td>\n",
-       "      <td>5.26</td>\n",
-       "      <td>0.34</td>\n",
-       "      <td>34.5</td>\n",
+       "      <td>→ Europa League via league finish</td>\n",
+       "      <td>61.6</td>\n",
+       "      <td>69</td>\n",
+       "      <td>1.82</td>\n",
+       "      <td>58</td>\n",
+       "      <td>1.53</td>\n",
+       "      <td>18.4</td>\n",
+       "      <td>5.45</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>35.6</td>\n",
        "      <td>2024</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -357,29 +357,36 @@
        "</div>"
       ],
       "text/plain": [
-       "   Rk            Squad  MP   W  D   L  GF  GA  GD  Pts  Pts/MP    xG   xGA  \\\n",
-       "0   1          Arsenal  36  26  5   5  88  28  60   83    2.31  71.7  26.8   \n",
-       "1   2  Manchester City  35  25  7   3  87  33  54   82    2.34  73.0  33.5   \n",
-       "2   3        Liverpool  36  23  9   4  81  38  43   78    2.17  81.5  42.1   \n",
-       "3   4      Aston Villa  36  20  7   9  73  53  20   67    1.86  59.4  55.7   \n",
-       "4   5        Tottenham  35  18  6  11  69  58  11   60    1.71  60.7  59.3   \n",
+       "   Rk            Squad  MP   W   D   L  GF  GA  GD  Pts  Pts/MP    xG   xGA  \\\n",
+       "0   1  Manchester City  38  28   7   3  96  34  62   91    2.39  80.5  35.6   \n",
+       "1   2          Arsenal  38  28   5   5  91  29  62   89    2.34  76.1  27.9   \n",
+       "2   3        Liverpool  38  24  10   4  86  41  45   82    2.16  87.8  45.7   \n",
+       "3   4      Aston Villa  38  20   8  10  76  61  15   68    1.79  63.3  59.9   \n",
+       "4   5        Tottenham  38  20   6  12  74  61  13   66    1.74  68.2  63.4   \n",
        "\n",
-       "    xGD  xGD/90  Attendance      Top Team Scorer         Goalkeeper Notes  \\\n",
-       "0  44.9    1.25       60232     Bukayo Saka - 16         David Raya   NaN   \n",
-       "1  39.6    1.13       49983  Erling Haaland - 25            Ederson   NaN   \n",
-       "2  39.4    1.09       52415   Mohamed Salah - 18            Alisson   NaN   \n",
-       "3   3.7    0.10       41837   Ollie Watkins - 19  Emiliano Martínez   NaN   \n",
-       "4   1.3    0.04       61526   Son Heung-min - 17  Guglielmo Vicario   NaN   \n",
+       "    xGD  xGD/90  Attendance      Top Team Scorer         Goalkeeper  \\\n",
+       "0  44.9    1.18       53012  Erling Haaland - 27            Ederson   \n",
+       "1  48.2    1.27       60236     Bukayo Saka - 16         David Raya   \n",
+       "2  42.0    1.11       55979   Mohamed Salah - 18            Alisson   \n",
+       "3   3.4    0.09       41858   Ollie Watkins - 19  Emiliano Martínez   \n",
+       "4   4.8    0.13       61482   Son Heung-min - 17  Guglielmo Vicario   \n",
        "\n",
-       "   Poss  Gls   Gls  Ast   Ast   CS%  SoT/90  G/SoT  SoT%  Season  \n",
-       "0  58.3   83  2.31   59  1.64  47.2    5.53   0.37  32.6    2024  \n",
-       "1  65.6   85  2.43   62  1.77  31.4    6.86   0.33  37.9    2024  \n",
-       "2  61.2   76  2.11   58  1.61  25.0    6.75   0.29  33.2    2024  \n",
-       "3  53.6   69  1.92   52  1.44  22.2    4.86   0.37  36.2    2024  \n",
-       "4  61.4   64  1.83   53  1.51  17.1    5.26   0.34  34.5    2024  "
+       "                                  Notes  Poss  Gls   Gls  Ast   Ast   CS%  \\\n",
+       "0  → Champions League via league finish  65.2   94  2.47   69  1.82  34.2   \n",
+       "1  → Champions League via league finish  58.2   86  2.26   62  1.63  47.4   \n",
+       "2  → Champions League via league finish  61.3   80  2.11   60  1.58  26.3   \n",
+       "3  → Champions League via league finish  53.1   72  1.89   55  1.45  21.1   \n",
+       "4     → Europa League via league finish  61.6   69  1.82   58  1.53  18.4   \n",
+       "\n",
+       "   SoT/90  G/SoT  SoT%  Season  \n",
+       "0    6.95   0.32  38.7    2024  \n",
+       "1    5.50   0.36  32.3    2024  \n",
+       "2    6.92   0.28  33.7    2024  \n",
+       "3    4.79   0.37  35.6    2024  \n",
+       "4    5.45   0.32  35.6    2024  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "7cbe3ef6",
    "metadata": {},
    "outputs": [
@@ -400,7 +407,7 @@
        "(120, 29)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "3592db13",
    "metadata": {},
    "outputs": [],
